--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "framer-motion": "^10.0.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.0"
+    "@next/mdx": "^14.0.0",
+    "gray-matter": "^4.0.3"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
