Fix: Add path aliases for @/ imports - enables proper module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "plugins": [
       {
         "name": "next"
