--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "framer-motion": "^10.0.0"
+    "framer-motion": "^10.0.0",
+    "gray-matter": "^4.0.3"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
