--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   },
