--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.0",
     "framer-motion": "^10.0.0",
     "gray-matter": "^4.0.3",
